# Goggles

gogs-cli/: Cargo.toml  README.md
gogs-cli-spec/: API_REFERENCE.md  ARCHITECTURE.md  CLI_SPECIFICATION.md  CONFIGURATION.md  CONTENTS.md  DEVELOPMENT_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md  TESTING_STRATEGY.md
gogs-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
gogs-cli/src/api/: client.rs  issues.rs  mod.rs  repos.rs  types.rs
gogs-cli/src/commands/: init.rs  issue.rs  mod.rs  repo.rs
