[package]
name = "gogs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Agent Development Team"]
description = "CLI tool for multi-agent development with Gogs issue tracking"
license = "MIT"
repository = "https://github.com/lawless-m/Goggles"

[[bin]]
name = "gog"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
dirs = "5.0"

[dev-dependencies]
# Testing
wiremock = "0.6"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
